--- a/MongoDB/docker-compose.yaml
+++ b/MongoDB/docker-compose.yaml
@@ -3,9 +3,9 @@ services:
   mongodb_container:
     image: mongo:latest
     environment:
-      MONGO_INITDB_DATBASE: my-database
+      MONGO_INITDB_DATBASE: mydatabase
       MONGO_INITDB_ROOT_USERNAME: mongo
-      MONGO_INITDB_ROOT_PASSWORD: Mongo@123
+      MONGO_INITDB_ROOT_PASSWORD: Mongo123
     ports:
       - 27017:27017
     volumes:
